# test_tesseract

./: pyproject.toml  test.py  total.txt
asset/tsv/: biology_example_1.tsv  biology_example_2.tsv  biology_example_3.tsv  history_example_1.tsv  history_example_2.tsv  history_example_3.tsv  how_are_you.tsv  how_are_you_blur_3.tsv  how_are_you_blur_5.tsv  physics_example_1.tsv  physics_example_2.tsv  physics_example_3.tsv  resolution_sample2_1920_1314.tsv  resolution_sample2_2400_1642.tsv  resolution_sample2_640_438.tsv  resolution_sample2_7489_5126.tsv  resolution_sample_1920_3031.tsv  resolution_sample_2400_3789.tsv  resolution_sample_4433_7000.tsv  resolution_sample_640_1010.tsv  statistics_example_1.tsv  statistics_example_2.tsv  test_table.tsv  test_table_blur_3.tsv  test_table_blur_5.tsv
temp/: blur.py  ccc.py  t.py  translated_image.py  tsv_translated_image.py
